# QuantumMinorProject

./: README.md  classical_weights.pt  qml_weights.pt
Code/: test3.py
Code/Grover's Algorithm/: sudoku.py
Code/Grover's Algorithm/WFC/: classical_WFC.py  classical_quantum_comb.py  quantum_2x2_2tiles.py  quantum_2x2_4tiles.py  quantum_3x3_2tiles.py  quantum_3x3_4tiles.py  quantum_WFC_grover  quantum_WFC_grover_qi.py  quantum_grover_operator.py  quantum_nxm_2tiles.py  quantum_nxm_4tiles  quantum_nxm_4tiles.py  quantum_nxm_4tiles_rules.py  quantum_nxm_4tiles_rules_short.py  quantum_nxm_4tiles_rules_short_more_ancillas.py  quantum_nxm_4tiles_short.py  quantum_wfc_2x2_4_tiles.py  quantum_wfc_3x3_4_tiles.py
Code/chess/: chess_engine.py  classical_model.py  features.py  features_qml.py  main.py  main_ui.py  qml_model.py  search.py  train_classical_stockfish.py  train_qml.py  ui_pygame.py
Code/lights_out/: main.js
Code/lights_out/classical/: main.py
Code/lights_out/quantum/: .env.sample  ciruit.cq  main.py  pyproject.toml
Code/lights_out/quantum/results/: results.txt
Code/sudoku/: quantum_grover_2x2.py  sudoku.py  sudoku_4x4_constraints.py  sudoku_4x4_generator.py  sudoku_4x4_quantum_solver.py
Code/tests/: entanglement_qi.py  grover_multiple_elements_Aer.py  machine_learning.py  test2.py  test_ibm.py
Code/wfc/: .gitignore  Cargo.toml  quantum_grover_operator.py  quantum_nxm_2tiles.py  quantum_nxm_4tiles.py
Code/wfc/src/: main.rs  wfc.rs
Code/wfc/src/wfc/: classical.rs  mod.rs
