[package]
name = "wfc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version =  "0.33.3", features = ["image"] }
#qiskit = { git = "https://github.com/Qiskit/qiskit-rs", rev = "fafa1289fc642fdb9dd10b243fec2e8e82c084e3" }
rand = "0.9.2"